apps/overlays/zion/open-webui/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: open-webui
  namespace: open-webui
spec:
  replicas: 1 # because of Longhorn PVC - to check in future how to use my NFS instead
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
      - name: open-webui
